Add points and ideas surfaced by the group.

--- a/Domain-Expertise-in-Data-Analysis.ipynb
+++ b/Domain-Expertise-in-Data-Analysis.ipynb
@@ -11,7 +11,7 @@
     "<center><h1>Domain Expertise in Data Analysis</h1></center>\n",
     "<center><h3>Greg Frazier</h3></center>\n",
     "<center><h3>Twitter: @gnfrazier</h3></center>\n",
-    "<center><h3>github.com/gnfrazier</h3></center>"
+    "<center><h3>https://github.com/gnfrazier/Analytics-Forward-Domain-Expertise</h3></center>"
    ]
   },
   {
@@ -66,7 +66,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "## When?\n",
     "\n",
@@ -134,7 +138,51 @@
     "## Disscussion Points\n",
     "- Industry Survey\n",
     "- Challenges in transitioning from Academia to Private Sector\n",
-    "- More resources to learn various segments"
+    "- More resources to learn various segments\n",
+    "\n",
+    "#### Slides on my github https://github.com/gnfrazier/Analytics-Forward-Domain-Expertise"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Disscussion Points Surfaced by the Group\n",
+    "\n",
+    "#### Additional Important Points\n",
+    "- Knowing Buzzwords for a company or industry\n",
+    "- Become an expert at working with domain experts\n",
+    "- Feeling of current expertise not being valuable\n",
+    "- Transitioning from thinking/thought to application\n",
+    "- Contrast of research in academia vs private sector\n",
+    "- Keep yourself in scope/balance (don't get too deep in other departments domain expertise)\n",
+    "- Remember that companies lie\n",
+    "- Remember that companies are not uniform\n",
+    "\n",
+    "\n",
+    "#### Additional Sources or Resourses to gain Domain Expertise\n",
+    "- Mooc - Coursera, Pluralsite, etc\n",
+    "- Books and printed material\n",
+    "- Journals and Papers\n",
+    "- Google Scholar\n",
+    "- Friends of the NCSU library (full article access)\n",
+    "- JOSS\n",
+    "- Stack Exchange (even for non-software questions)\n",
+    "- Industry Professional Groups and Meetups\n",
+    "- Industry Magazines\n",
+    "- University Department Seminars\n",
+    "- Safari Books Online\n",
+    "- O'reilly and Pearson\n",
+    "- Mentor or Mentee\n",
+    "- Talk to real customers!!\n",
+    "- Company Mission Statement\n",
+    "- Glassdoor - Previous Employee Reviews\n",
+    "- Social Media Feeds for the company (full immersion)\n",
+    "- Linked In\n"
    ]
   }
  ],
